--- a/public/help.html
+++ b/public/help.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title || 'User Guide' %></title>
+    <title>USER GUIDE</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="<%= favicon || 'https://salespilot.cybertrendhub.store/assets/images/favicon-blue.ico' %>" />
     <style>
@@ -91,7 +91,7 @@
             border-radius: 5px;
             text-align: center;
             text-decoration: none;
-            margin-top: 10px;
+            margin: 20px;
             transition: background-color 0.3s ease;
         }
         .button:hover {
@@ -179,3 +179,5 @@
 
     <p>This guide will help you efficiently use SalesPilot to manage your inventory, sales, and reporting. For more assistance, contact our support team.</p>
     <a href="/dashboard" class="button">Back to Dashboard</a>
+</body>
+</html>
